--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
         sans-serif;
     font-family: 'Roboto Condensed',
         sans-serif;
+
+    margin: 0;
 }
 
 section {
@@ -15,43 +17,86 @@ section {
     padding-left: 10px;
 }
 
+#top {
+    padding-left: 60px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+}
+
 .half-width img {
     width: 80%;
 
 }
 
 .me {
-    width: 50%;
+    width: 30%;
     height: 80%;
+
 }
 
-.link-button {
-    background-color: palevioletred;
-    border: 5px solid none;
-    border-radius: 2px;
-    width: 5%;
-    font-size: medium;
+.me-2 {
+    padding-top: 60px;
+    padding-right: 10px;
 }
 
 .about-me {
     background-image: url(images/shapes/7.png);
+    background-size: cover;
+
     background-repeat: no-repeat;
-    width: auto;
+    margin-top: 50px;
 }
+
+.link-button {
+    text-decoration: none;
+    background-color: palevioletred;
+    border-radius: 2px;
+    padding: 10px 40px;
+    font-weight: 700;
+    color: wheat;
+}
+
+
 
 #recipies {
     text-align: center;
 }
 
+.recipies-item {
+    margin-top: 50px;
+    margin: 30px;
+
+}
+
+.item {
+    width: 40%;
+
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 40px gray;
+    padding-top: 20px;
+    padding-left: 15px;
+
+    border-radius: 10px;
+
+}
+
 .follow {
 
     display: flex;
+    box-shadow: 10px 12px 30px gray;
+    margin: 20px;
     font-size: 400;
     text-align: center;
+    border-radius: 10px;
 }
 
 footer {
     text-align: center;
+
+    height: 120px;
+
+    padding-top: 50px;
 
     background-color: rgba(68, 58, 58, 0.384);
 
